0.8.0 - currently working on
- [#4448] Fix: createRestrictedImage fails with latest Core master
- [#4449] Fix: tx_oelib_Object::__destruct must not be abstract
- [#4352] Change: Require PHP 5.3
- [#4453] Cleanup: Use assertSame/assertNotSame instead of assertEquals
- [#4441] Fix: The translator registry must not use forceCharset for TYPO3 >= 4.7
- [#4442] Change: Make UTF-8 the default charset
- [#4434] Fix: Framework::getAutoIncrement and FrameworkTest::getSortingOfRelation need to return integers
- [#4435] Fix: Database::createRecursivePageList needs to return a string even for integer $startPages and zero $recursionDepth
- [#4140] Change: Require TYPO3 4.5
- [#4369] Fix: Test failure with master in tx_seminars_cli_MailNotifierTest
- [#3815] Fix: Throw more meaningful Exceptions
- [#4385] Fix: Model_FrontEndUser::setName has a lowercase "n"
- [#4398] Fix: Make the exception about dead models more helpful
- [#4357] Fix: tx_oelib_Model_FrontEndUser::getGender should use "99" for "undefined"
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4264] Cleanup: Add the parameter name to all @param
- [#4295] Fix: Fix all deprecation log warnings and version-specific unit test failures when running the unit tests on the current Core master
- [#4284] Fix: Fix the translate function for TYPO3 4.6 branch and master
- [#4344] Fix: Non-static methods of the TranslatorRegistry are called statically in the unit tests
- [#4350] Fix: Fix undefined and unused variables and undefined classes
- [#3987] Change: Require TYPO3 4.4
- [#4377] Fix: Autoload entries for Country Model and Repository are missing the Classes/ prefix
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4290] Feature: Add an ImageSourceViewHelper
- [#4289] Feature: Add an UppercaseViewHelper
- [#4299] Feature: Add an extbase model and repository for static countries
- [#4288] Cleanup: Move the Google Maps ViewHelper to a fluid-conform location