@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4452] Cleanup: Stop using the DATABASE_QUERY_ERROR and DATABASE_RESULT_ERROR constants
 - [#4448] Fix: createRestrictedImage fails with latest Core master
 - [#4449] Fix: tx_oelib_Object::__destruct must not be abstract
 - [#4352] Change: Require PHP 5.3
